# ringToySimulation

./: CMakeLists.txt  runSim.cc  simConfiguration.json  vis.mac
src/: ActionInitialization.cc  ActionInitialization.hh  DetectorConstruction.cc  DetectorConstruction.hh  EventAction.cc  EventAction.hh  PhysicsList.cc  PhysicsList.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  RunAction.cc  RunAction.hh  SimConfiguration.cc  SimConfiguration.hh  SteppingAction.cc  SteppingAction.hh
